--- a/05Simulator.ipynb
+++ b/05Simulator.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 1,
    "id": "e5228fbf",
    "metadata": {},
    "outputs": [],
@@ -51,7 +51,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 2,
    "id": "84df827e",
    "metadata": {},
    "outputs": [],
@@ -133,7 +133,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 3,
    "id": "8e500b86",
    "metadata": {},
    "outputs": [],
@@ -217,7 +217,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 21,
    "id": "e310c57f",
    "metadata": {},
    "outputs": [
@@ -226,7 +226,14 @@
      "output_type": "stream",
      "text": [
       "**************************************************\n",
-      "Current step  2520\n"
+      "Current step  2520\n",
+      "\n",
+      "\n",
+      "\n",
+      "Instant match:  2\n",
+      "Instant cancel:  0\n",
+      "Cumulative match:  2\n",
+      "Cumulative cancel:  0\n"
      ]
     }
    ],
@@ -451,7 +458,7 @@
     "        \n",
     "    Drivers_Selection={}\n",
     "    \n",
-    "    Drivers_Selection_Count={'A':0,'B':0}\n",
+    "    Drivers_Selection_Count={'A':0,'B':0,'Decline':0}\n",
     "    \n",
     "    for driver_id in Driver_prob.keys():\n",
     "        \n",
@@ -461,224 +468,247 @@
     "        \n",
     "        Drivers_Selection[driver_id]=selection\n",
     "        \n",
-    "        if platform!='Decline':\n",
-    "        \n",
-    "            Drivers_Selection_Count[platform]+=1\n",
+    "        Drivers_Selection_Count[platform]+=1\n",
     "            \n",
-    "    break\n",
     "    \n",
-    "#     '''(3-5) Passengers make a selection'''\n",
+    "    '''(3-5) Passengers make a selection'''\n",
     "    \n",
-    "#     Passengers_Utility={}\n",
+    "    Passengers_Utility={}\n",
     "    \n",
-    "#     for platform,results in Matching_result.items():\n",
+    "    for platform,results in Matching_result.items():\n",
     "        \n",
-    "#         for order_id,driver_id in results.items():\n",
+    "        for order_id,driver_id in results.items():\n",
     "            \n",
-    "#             if order_id not in Passengers_Utility.keys():\n",
+    "            fare=Order_info[order_id]['Fare_'+platform]\n",
+    "            \n",
+    "            pickup_time=Pickup_time[order_id][driver_id]\n",
+    "            \n",
+    "            travel_time=Order_info[order_id]['Travel_duration']\n",
+    "            \n",
+    "            numerator=beta1*travel_time\n",
+    "            \n",
+    "            denominator=fare+beta2*int(pickup_time/6.0)\n",
+    "            \n",
+    "            if order_id not in Passengers_Utility.keys():\n",
     "\n",
-    "#                 Passengers_Utility[order_id]={}\n",
+    "                Passengers_Utility[order_id]={}\n",
     "                \n",
-    "#                 Passengers_Utility[order_id][driver_id+'_'+platform]=Order_info[order_id]['Fare_'+platform]-beta2*Order_info[order_id]['Travel_duration']\n",
+    "                Passengers_Utility[order_id][driver_id+'_'+platform]=numerator/denominator\n",
     "                \n",
-    "#             else:\n",
+    "            else:\n",
     "                \n",
-    "#                 Passengers_Utility[order_id][driver_id+'_'+platform]=Order_info[order_id]['Fare_'+platform]-beta2*Order_info[order_id]['Travel_duration']\n",
+    "                Passengers_Utility[order_id][driver_id+'_'+platform]=numerator/denominator\n",
+    "                \n",
+    "    for order_id in Passengers_Utility.keys():\n",
+    "                \n",
+    "        Passengers_Utility[order_id]['Decline']=Truncated_Gauss(0.5,0.1,0.4,0.6)\n",
+    "        \n",
+    "    '''Probability'''\n",
+    "    \n",
+    "    Passenger_prob={}\n",
+    "    \n",
+    "    for order_id in Passengers_Utility.keys():\n",
+    "        \n",
+    "        exp_sum=sum([np.exp(v) for v in Passengers_Utility[order_id].values()])\n",
+    "        \n",
+    "        Passenger_prob[order_id]={}\n",
+    "        \n",
+    "        for driver_id in Passengers_Utility[order_id].keys():\n",
     "            \n",
+    "            exp_v=np.exp(Passengers_Utility[order_id][driver_id])\n",
+    "            \n",
+    "            Passenger_prob[order_id][driver_id]=exp_v/exp_sum\n",
     "        \n",
+    "    '''Selection'''\n",
     "        \n",
-    "#     Passengers_Selection={}\n",
+    "    Passengers_Selection={}\n",
     "    \n",
-    "#     Passengers_Selection_Count={'A':0,'B':0}\n",
+    "    Passengers_Selection_Count={'A':0,'B':0,'Decline':0}\n",
     "    \n",
-    "#     for order_id in Passengers_Utility.keys():\n",
+    "    for order_id in Passengers_Utility.keys():\n",
     "        \n",
-    "#         selection=min(Passengers_Utility[order_id], key=Passengers_Utility[order_id].get)\n",
+    "        selection=np.random.choice(list(Passenger_prob[order_id].keys()), p=list(Passenger_prob[order_id].values()))\n",
     "        \n",
-    "#         platform=selection.split('_')[-1]\n",
+    "        platform=selection.split('_')[-1]\n",
     "        \n",
-    "#         Passengers_Selection[order_id]=selection\n",
+    "        Passengers_Selection[order_id]=selection\n",
     "        \n",
-    "#         Passengers_Selection_Count[platform]+=1\n",
+    "        Passengers_Selection_Count[platform]+=1\n",
     "    \n",
-    "        \n",
-    "#     '''(3-6) Consensus'''\n",
-    "    \n",
-    "#     Matching_result={}\n",
-    "    \n",
-    "#     Matching_platform={}\n",
-    "    \n",
-    "#     Driver_consensus=[]\n",
-    "    \n",
-    "#     Order_consensus=[]\n",
-    "    \n",
-    "#     for driver_id,value in Drivers_Selection.items():\n",
-    "        \n",
-    "#         Driver_consensus.append(driver_id+'_'+value)\n",
-    "        \n",
-    "#     for order_id,value in Passengers_Selection.items():\n",
-    "        \n",
-    "#         Order_consensus.append(value+'_'+order_id)\n",
-    "        \n",
-    "#     Consensus=[pair for pair in Driver_consensus if pair in Order_consensus]\n",
-    "    \n",
-    "#     for pair in Consensus:\n",
-    "        \n",
-    "#         order_id=pair.split('_')[2]\n",
-    "        \n",
-    "#         driver_id=pair.split('_')[0]\n",
-    "        \n",
-    "#         platform=pair.split('_')[1]\n",
-    "        \n",
-    "#         Matching_result[order_id]=driver_id\n",
-    "        \n",
-    "#         Matching_platform[order_id]=platform\n",
-    "        \n",
     "\n",
-    "\n",
+    "        \n",
+    "    '''(3-6) Consensus'''\n",
     "    \n",
+    "    Matching_result={}\n",
     "    \n",
-    "#     '''(3-7) Assignment'''\n",
+    "    Matching_platform={}\n",
+    "    \n",
+    "    Driver_consensus=[]\n",
+    "    \n",
+    "    Order_consensus=[]\n",
+    "    \n",
+    "    for driver_id,value in Drivers_Selection.items():\n",
+    "        \n",
+    "        Driver_consensus.append(driver_id+'_'+value)\n",
+    "        \n",
+    "    for order_id,value in Passengers_Selection.items():\n",
+    "        \n",
+    "        Order_consensus.append(value+'_'+order_id)\n",
+    "        \n",
+    "    Consensus=[pair for pair in Driver_consensus if pair in Order_consensus]\n",
+    "    \n",
+    "    for pair in Consensus:\n",
+    "        \n",
+    "        order_id=pair.split('_')[2]\n",
+    "        \n",
+    "        driver_id=pair.split('_')[0]\n",
+    "        \n",
+    "        platform=pair.split('_')[1]\n",
+    "        \n",
+    "        Matching_result[order_id]=driver_id\n",
+    "        \n",
+    "        Matching_platform[order_id]=platform\n",
+    "        \n",
+    "    \n",
+    "    '''(3-7) Assignment'''\n",
     "\n",
     "    \n",
-    "#     for order_id,driver_id in Matching_result.items():\n",
+    "    for order_id,driver_id in Matching_result.items():\n",
     "        \n",
-    "#         Added_item={}\n",
+    "        Added_item={}\n",
     "        \n",
-    "#         Pickup_step=step+Pickup_time[order_id][driver_id]\n",
+    "        Pickup_step=step+Pickup_time[order_id][driver_id]\n",
     "        \n",
-    "#         Dropoff_step=Pickup_step+Order_info[order_id]['Travel_time']\n",
+    "        Dropoff_step=Pickup_step+Order_info[order_id]['Travel_time']\n",
     "\n",
-    "#         Order_df.loc[(Order_df['Order_id']==order_id),'Response_step']=step\n",
+    "        Order_df.loc[(Order_df['Order_id']==order_id),'Response_step']=step\n",
     "\n",
-    "#         Order_df.loc[(Order_df['Order_id']==order_id),'Pickup_step']=Pickup_step\n",
+    "        Order_df.loc[(Order_df['Order_id']==order_id),'Pickup_step']=Pickup_step\n",
     "\n",
-    "#         Order_df.loc[(Order_df['Order_id']==order_id),'Driver_id']=driver_id\n",
+    "        Order_df.loc[(Order_df['Order_id']==order_id),'Driver_id']=driver_id\n",
     "\n",
-    "#         Order_df.loc[(Order_df['Order_id']==order_id),'Platform']=Matching_platform[order_id]\n",
+    "        Order_df.loc[(Order_df['Order_id']==order_id),'Platform']=Matching_platform[order_id]\n",
     "\n",
-    "#         '''Matched driver'''\n",
+    "        '''Matched driver'''\n",
     "\n",
-    "#         Driver_df.loc[(Driver_df['Step']==step)&(Driver_df['Driver_id']==driver_id),'Order_id']=order_id\n",
+    "        Driver_df.loc[(Driver_df['Step']==step)&(Driver_df['Driver_id']==driver_id),'Order_id']=order_id\n",
     "\n",
-    "#         Added_item['Driver_id']=driver_id\n",
+    "        Added_item['Driver_id']=driver_id\n",
     "\n",
-    "#         Added_item['Order_id']='Idle'\n",
+    "        Added_item['Order_id']='Idle'\n",
     "\n",
-    "#         Added_item['Step']=Dropoff_step\n",
+    "        Added_item['Step']=Dropoff_step\n",
     "\n",
-    "#         Added_item['Point']=Order_info[order_id]['Dropoff_Point']\n",
+    "        Added_item['Point']=Order_info[order_id]['Dropoff_Point']\n",
     "\n",
-    "#         Added_item['Grid']=Order_info[order_id]['Dropoff_Grid']\n",
+    "        Added_item['Grid']=Order_info[order_id]['Dropoff_Grid']\n",
     "\n",
-    "#         Added_item['Reposition_Point']=Order_info[order_id]['Dropoff_Point']\n",
+    "        Added_item['Reposition_Point']=Order_info[order_id]['Dropoff_Point']\n",
     "\n",
-    "#         Added_item['Reposition_Grid']=Order_info[order_id]['Dropoff_Grid']\n",
+    "        Added_item['Reposition_Grid']=Order_info[order_id]['Dropoff_Grid']\n",
     "        \n",
-    "#         Driver_df=Driver_df.append(Added_item, ignore_index=True)\n",
+    "        Driver_df=Driver_df.append(Added_item, ignore_index=True)\n",
     "\n",
     "\n",
     "            \n",
-    "#     '''Canceled Orders'''\n",
+    "    '''Canceled Orders'''\n",
     "        \n",
-    "#     Unmatched_orders=[O for O in Order_info.keys() if O not in Matching_result.keys()]\n",
+    "    Unmatched_orders=[O for O in Order_info.keys() if O not in Matching_result.keys()]\n",
     "    \n",
-    "#     cancellation=0\n",
+    "    cancellation=0\n",
     "\n",
-    "#     if len(Unmatched_orders)!=0:\n",
+    "    if len(Unmatched_orders)!=0:\n",
     "        \n",
-    "#         cancellation=Order_df.loc[((step-Order_df['Arrive_step'])>Order_df['Matching_patience'])&(Order_df['Order_id'].isin(Unmatched_orders))].shape[0]\n",
+    "        cancellation=Order_df.loc[((step-Order_df['Arrive_step'])>Order_df['Matching_patience'])&(Order_df['Order_id'].isin(Unmatched_orders))].shape[0]\n",
     "\n",
-    "#         Order_df.loc[((step-Order_df['Arrive_step'])>Order_df['Matching_patience'])&(Order_df['Order_id'].isin(Unmatched_orders)),'Driver_id']='Canceled'\n",
+    "        Order_df.loc[((step-Order_df['Arrive_step'])>Order_df['Matching_patience'])&(Order_df['Order_id'].isin(Unmatched_orders)),'Driver_id']='Canceled'\n",
     "\n",
     "        \n",
-    "#     '''(3-8) Repositioning'''\n",
+    "    '''(3-8) Repositioning'''\n",
     "    \n",
-    "#     Repositioned_drivers=copy.deepcopy(Driver_df.loc[(Driver_df['Step']==step)&(Driver_df['Order_id']=='Idle')])\n",
+    "    Repositioned_drivers=copy.deepcopy(Driver_df.loc[(Driver_df['Step']==step)&(Driver_df['Order_id']=='Idle')])\n",
     "    \n",
-    "#     Repositioned_drivers['Next_Step']=step+1\n",
+    "    Repositioned_drivers['Next_Step']=step+1\n",
     "\n",
-    "#     Repositioned_drivers=Repositioned_drivers[['Driver_id','Order_id','Next_Step','Point','Grid','Reposition_Point','Reposition_Grid']]\n",
+    "    Repositioned_drivers=Repositioned_drivers[['Driver_id','Order_id','Next_Step','Point','Grid','Reposition_Point','Reposition_Grid']]\n",
     "\n",
-    "#     Repositioned_drivers=Repositioned_drivers.rename(columns={'Next_Step':'Step'})\n",
+    "    Repositioned_drivers=Repositioned_drivers.rename(columns={'Next_Step':'Step'})\n",
     "\n",
-    "#     Repositioned_drivers=Repositioned_drivers[['Driver_id','Order_id','Step','Point','Grid','Reposition_Point','Reposition_Grid']]\n",
+    "    Repositioned_drivers=Repositioned_drivers[['Driver_id','Order_id','Step','Point','Grid','Reposition_Point','Reposition_Grid']]\n",
     "    \n",
-    "#     Driver_df=pd.concat([Driver_df,Repositioned_drivers],ignore_index=True)\n",
+    "    Driver_df=pd.concat([Driver_df,Repositioned_drivers],ignore_index=True)\n",
     "    \n",
     "    \n",
-    "#     '''(3-8) Statistics'''\n",
+    "    '''(3-8) Statistics'''\n",
     "    \n",
-    "#     Instant_cancel=cancellation\n",
+    "    Instant_cancel=cancellation\n",
     "    \n",
-    "#     Instant_match=len(Matching_result)\n",
+    "    Instant_match=len(Matching_result)\n",
     "    \n",
-    "#     Culmulative_cancel=Order_df.loc[(Order_df['Driver_id']=='Canceled')].shape[0]\n",
+    "    Culmulative_cancel=Order_df.loc[(Order_df['Driver_id']=='Canceled')].shape[0]\n",
     "        \n",
-    "#     Culmulative_match=Order_df.loc[(Order_df['Driver_id']!='Waiting')&(Order_df['Driver_id']!='Canceled')].shape[0]\n",
+    "    Culmulative_match=Order_df.loc[(Order_df['Driver_id']!='Waiting')&(Order_df['Driver_id']!='Canceled')].shape[0]\n",
     "    \n",
     "    \n",
-    "#     record={}\n",
+    "    record={}\n",
     "    \n",
-    "#     record['step']=step\n",
+    "    record['step']=step\n",
     "    \n",
-    "#     record['Driver_selelction_A']=Drivers_Selection_Count['A']\n",
+    "    record['Driver_selelction_A']=Drivers_Selection_Count['A']\n",
     "    \n",
-    "#     record['Driver_selelction_B']=Drivers_Selection_Count['B']\n",
+    "    record['Driver_selelction_B']=Drivers_Selection_Count['B']\n",
     "    \n",
-    "#     record['Passenger_selection_A']=Passengers_Selection_Count['A']\n",
+    "    record['Passenger_selection_A']=Passengers_Selection_Count['A']\n",
     "    \n",
-    "#     record['Passenger_selection_B']=Passengers_Selection_Count['B']\n",
+    "    record['Passenger_selection_B']=Passengers_Selection_Count['B']\n",
     "    \n",
-    "#     record['Instant_match']=Instant_match\n",
+    "    record['Instant_match']=Instant_match\n",
     "    \n",
-    "#     record['Instant_cancel']=Instant_cancel\n",
+    "    record['Instant_cancel']=Instant_cancel\n",
     "    \n",
-    "#     record['Idle_vehicles']=Repositioned_drivers.loc[Repositioned_drivers['Point']==Repositioned_drivers['Reposition_Point']].shape[0]\n",
+    "    record['Idle_vehicles']=Repositioned_drivers.loc[Repositioned_drivers['Point']==Repositioned_drivers['Reposition_Point']].shape[0]\n",
     "\n",
-    "#     record['Cumulative_match']=Culmulative_match\n",
+    "    record['Cumulative_match']=Culmulative_match\n",
     "    \n",
-    "#     record['Cumulative_cancel']=Culmulative_cancel\n",
+    "    record['Cumulative_cancel']=Culmulative_cancel\n",
     "    \n",
-    "#     Record=Record.append(record, ignore_index=True)\n",
+    "    Record=Record.append(record, ignore_index=True)\n",
     "    \n",
     "\n",
-    "#     print('\\n'*2)\n",
+    "    print('\\n'*2)\n",
     "    \n",
     "    \n",
-    "#     print('Instant match: ',Instant_match)\n",
+    "    print('Instant match: ',Instant_match)\n",
     "    \n",
-    "#     print('Instant cancel: ',Instant_cancel)\n",
+    "    print('Instant cancel: ',Instant_cancel)\n",
     "    \n",
-    "#     print('Cumulative match: ',Culmulative_match)\n",
+    "    print('Cumulative match: ',Culmulative_match)\n",
     "    \n",
-    "#     print('Cumulative cancel: ',Culmulative_cancel)"
+    "    print('Cumulative cancel: ',Culmulative_cancel)\n",
+    "    \n",
+    "    \n",
+    "    break"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 22,
    "id": "349805fd",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{'D118': 'A_O3164',\n",
-       " 'D17': 'Decline',\n",
-       " 'D91': 'B_O1659',\n",
-       " 'D55': 'Decline',\n",
-       " 'D106': 'A_O3016',\n",
-       " 'D119': 'Decline'}"
+       "{'O3164': 'D118', 'O1659': 'D91'}"
       ]
      },
-     "execution_count": 41,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "Drivers_Selection"
+    "Matching_result"
    ]
   },
   {
@@ -692,7 +722,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -706,7 +736,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.7"
+   "version": "3.8.8"
   }
  },
  "nbformat": 4,
