--- a/05Simulator.ipynb
+++ b/05Simulator.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 41,
    "id": "e5228fbf",
    "metadata": {},
    "outputs": [],
@@ -51,7 +51,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 42,
    "id": "84df827e",
    "metadata": {},
    "outputs": [],
@@ -133,7 +133,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 43,
    "id": "8e500b86",
    "metadata": {},
    "outputs": [],
@@ -217,26 +217,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 45,
    "id": "e310c57f",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "**************************************************\n",
-      "Current step  2520\n",
-      "\n",
-      "\n",
-      "\n",
-      "Instant match:  2\n",
-      "Instant cancel:  0\n",
-      "Cumulative match:  2\n",
-      "Cumulative cancel:  0\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "'''Get travel distance'''\n",
     "\n",
@@ -252,11 +236,11 @@
     "\n",
     "'''Truncated Gaussian distribution'''\n",
     "\n",
-    "def Truncated_Gauss(mu,sigma,lower,upper,):\n",
+    "def Truncated_Gauss(mu,sigma,lower,upper):\n",
     "\n",
     "    X = stats.truncnorm((lower - mu) / sigma, (upper - mu) / sigma, loc=mu, scale=sigma)\n",
     "    \n",
-    "    return [round(x,0) for x in X.rvs(1)][0]\n",
+    "    return [x for x in X.rvs(1)][0]\n",
     "\n",
     "'''(1) Load Order data'''\n",
     "\n",
@@ -331,6 +315,8 @@
     "\n",
     "    Operation_Grids=Hex.Compact_lists([x['Match_Grids'] for x in Order_info.values()])\n",
     "    \n",
+    "    print('Number of waiting orders: ',len(Order_info))\n",
+    "    \n",
     "    \n",
     "    '''(3-2) collect Idle drivers'''\n",
     "    \n",
@@ -357,6 +343,8 @@
     "            Grid_Drivers[row['Grid']]=[row['Driver_id']]\n",
     "            \n",
     "    Idle_drivers=list(Driver_df.loc[(Driver_df['Step']==step)&(Driver_df['Order_id']=='Idle'),'Driver_id'])\n",
+    "    \n",
+    "    print('Number of idle drivers: ',len(Idle_drivers))\n",
     "    \n",
     "   \n",
     "    '''(3-3) Order Dispatching'''\n",
@@ -402,8 +390,6 @@
     "    Matching_result['B']=One2One_Matching(Profit_B)\n",
     "    \n",
     "    \n",
-    "    \n",
-    "    \n",
     "    '''(3-4) Drivers make a selection'''\n",
     "    \n",
     "    Drivers_Utility={}\n",
@@ -420,24 +406,21 @@
     "            \n",
     "            travel_time=Order_info[order_id]['Travel_duration']\n",
     "            \n",
-    "            numerator=fare*(1-commission_rate)-beta3*int(pickup_time/6.0)\n",
-    "            \n",
-    "            denominator=beta4*travel_time\n",
+    "            utility=(1-commission_rate)*fare-Truncated_Gauss(0.4,0.1,0.3,0.5)*int(pickup_time/6)\n",
     "            \n",
     "            if driver_id not in Drivers_Utility.keys():\n",
     "\n",
     "                Drivers_Utility[driver_id]={}\n",
     "                \n",
-    "                Drivers_Utility[driver_id][platform+'_'+order_id]=numerator/denominator\n",
+    "                Drivers_Utility[driver_id][platform+'_'+order_id]=utility\n",
+    "                \n",
+    "                Drivers_Utility[driver_id]['Decline']=Truncated_Gauss(0.3,0.1,0.2,0.4)*travel_time\n",
     "                \n",
     "            else:\n",
     "                \n",
-    "                Drivers_Utility[driver_id][platform+'_'+order_id]=numerator/denominator\n",
+    "                Drivers_Utility[driver_id][platform+'_'+order_id]=utility\n",
     "                \n",
-    "    for driver_id in Drivers_Utility.keys():\n",
-    "                \n",
-    "        Drivers_Utility[driver_id]['Decline']=Truncated_Gauss(1,0.1,0.9,1.1)\n",
-    "        \n",
+    "\n",
     "    '''Probability'''\n",
     "    \n",
     "    Driver_prob={}\n",
@@ -485,23 +468,22 @@
     "            \n",
     "            travel_time=Order_info[order_id]['Travel_duration']\n",
     "            \n",
-    "            numerator=beta1*travel_time\n",
+    "            utility=-1*fare-int(pickup_time/6)*Truncated_Gauss(0.6,0.2,0.4,0.8)\n",
     "            \n",
-    "            denominator=fare+beta2*int(pickup_time/6.0)\n",
     "            \n",
     "            if order_id not in Passengers_Utility.keys():\n",
     "\n",
     "                Passengers_Utility[order_id]={}\n",
     "                \n",
-    "                Passengers_Utility[order_id][driver_id+'_'+platform]=numerator/denominator\n",
+    "                Passengers_Utility[order_id][driver_id+'_'+platform]=utility\n",
+    "                \n",
+    "                Passengers_Utility[order_id]['Decline']=-1*Truncated_Gauss(1.5,0.5,1.0,2.0)*travel_time\n",
     "                \n",
     "            else:\n",
     "                \n",
-    "                Passengers_Utility[order_id][driver_id+'_'+platform]=numerator/denominator\n",
+    "                Passengers_Utility[order_id][driver_id+'_'+platform]=utility\n",
     "                \n",
-    "    for order_id in Passengers_Utility.keys():\n",
-    "                \n",
-    "        Passengers_Utility[order_id]['Decline']=Truncated_Gauss(0.5,0.1,0.4,0.6)\n",
+    "  \n",
     "        \n",
     "    '''Probability'''\n",
     "    \n",
@@ -658,9 +640,13 @@
     "    \n",
     "    record['Driver_selelction_B']=Drivers_Selection_Count['B']\n",
     "    \n",
+    "    record['Driver_selelction_Decline']=Drivers_Selection_Count['Decline']\n",
+    "    \n",
     "    record['Passenger_selection_A']=Passengers_Selection_Count['A']\n",
     "    \n",
     "    record['Passenger_selection_B']=Passengers_Selection_Count['B']\n",
+    "    \n",
+    "    record['Passenger_selection_Decline']=Passengers_Selection_Count['Decline']\n",
     "    \n",
     "    record['Instant_match']=Instant_match\n",
     "    \n",
@@ -686,43 +672,27 @@
     "    \n",
     "    print('Cumulative cancel: ',Culmulative_cancel)\n",
     "    \n",
-    "    \n",
-    "    break"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 22,
-   "id": "349805fd",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "{'O3164': 'D118', 'O1659': 'D91'}"
-      ]
-     },
-     "execution_count": 22,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "Matching_result"
+    "    \n"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a7dc67d6",
+   "id": "1888334e",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "Order_df.to_csv(os.path.join('Order_result_'+str(day)+'.csv'))\n",
+    "\n",
+    "Driver_df.to_csv(os.path.join('Driver_result_'+str(day)+'.csv'))\n",
+    "\n",
+    "Record.to_csv(os.path.join('Record_'+str(day)+'.csv'))"
+   ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -736,7 +706,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.8"
+   "version": "3.9.7"
   }
  },
  "nbformat": 4,
