--- a/03-01Static_vs_Static.ipynb
+++ b/03-01Static_vs_Static.ipynb
@@ -335,18 +335,18 @@
     "            pick_up_distance=Point(order_batch_info[i].pickup_lng,order_batch_info[i].pickup_lat).distance(Point(driver_batch_info[j].lng,driver_batch_info[j].lat))*110000*1.2\n",
     "\n",
     "            tau_matrix[i,j]=pick_up_distance/speed # [min]\n",
-    "    \n",
+    "            \n",
     "    ######################################################################################################\n",
     "    \n",
-    "    # 03-04 platform 1 offers the dispatching and pricing\n",
-    "    \n",
-    "    fare1,wage1,x1=static(etd_matrix,ett_matrix,tau_matrix)\n",
-    "    \n",
-    "    ######################################################################################################\n",
-    "    \n",
-    "    # 03-05 platform 2 offers the dispatching and pricing\n",
+    "    # 03-04 platform 2 offers the dispatching and pricing\n",
     "    \n",
     "    fare2,wage2,x2=static(etd_matrix,ett_matrix,tau_matrix)\n",
+    "    \n",
+    "    ######################################################################################################\n",
+    "    \n",
+    "    # 03-05 platform 1 offers the dispatching and pricing\n",
+    "    \n",
+    "    fare1,wage1,x1=static(etd_matrix,ett_matrix,tau_matrix)\n",
     "    \n",
     "    ######################################################################################################\n",
     "    \n",
@@ -653,6 +653,20 @@
     "    # 03-13 dynamically update the timestamp\n",
     "    \n",
     "    time_stamp+=batch_interval\n",
+    "    \n",
+    "    ######################################################################################################\n",
+    "    \n",
+    "    # 03-14 quit condition\n",
+    "    \n",
+    "    completion_percentage=100*(order_df.loc[order_df.driver_id!='waiting'].shape[0])/(order_df.shape[0])\n",
+    "    \n",
+    "    print(\"Current completion percentage = %.1f\"%completion_percentage)\n",
+    "    \n",
+    "    order_batch=order_df.loc[order_df.driver_id=='waiting']\n",
+    "    \n",
+    "    if order_batch.shape[0]==0:\n",
+    "        \n",
+    "        break\n",
     "    \n",
     "\n",
     "order_df.to_csv('./02result/'+scenario+'/customer_2023-02-'+str(day)+'.csv')\n",
