--- a/03-01Static_vs_Static.ipynb
+++ b/03-01Static_vs_Static.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -94,7 +94,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -119,7 +119,17 @@
     "######################################################################################################\n",
     "######################################################################################################\n",
     "\n",
-    "speed=20000/60\n",
+    "dispatching_radius=5 # [km]\n",
+    "\n",
+    "######################################################################################################\n",
+    "######################################################################################################\n",
+    "\n",
+    "speed=20000/60 # [m/min]\n",
+    "\n",
+    "######################################################################################################\n",
+    "######################################################################################################\n",
+    "\n",
+    "waiting_patience=180 # [s]\n",
     "\n",
     "######################################################################################################\n",
     "######################################################################################################\n",
@@ -160,7 +170,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -168,14 +178,28 @@
     "######################################################################################################\n",
     "\n",
     "def static(etd_matrix,ett_matrix,tau_matrix):\n",
+    "    \n",
+    "    ################################################################################################\n",
     "\n",
     "    order_num,driver_num=etd_matrix.shape[0],etd_matrix.shape[1]\n",
+    "    \n",
+    "    ################################################################################################\n",
     "\n",
     "    fare=theta_0*np.ones([order_num,driver_num])+theta_1*etd_matrix+theta_2*ett_matrix\n",
     "\n",
     "    wage=fare*lambda_\n",
+    "    \n",
+    "    ################################################################################################\n",
+    "    \n",
+    "    weight=np.zeros([order_num,driver_num])\n",
+    "    \n",
+    "    for o in range(order_num):\n",
     "\n",
-    "    weight=(fare-wage)/tau_matrix\n",
+    "        for d in range(driver_num):\n",
+    "            \n",
+    "            if tau_matrix[o,d]<dispatching_radius:\n",
+    "\n",
+    "                weight[o,d]=(fare[o,d]-wage[o,d])/tau_matrix[o,d]\n",
     "\n",
     "    x=Bipartite_matching(weight,tau_matrix)\n",
     "\n",
@@ -191,7 +215,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -202,19 +226,19 @@
       "\n",
       "****************************************************************************************************\n",
       "****************************************************************************************************\n",
-      "+----+-----------------------+---------+---------+\n",
-      "|    |        indexes        |    1    |    2    |\n",
-      "+====+=======================+=========+=========+\n",
-      "| 0  |         Time          |  25215  |  25215  |\n",
-      "+----+-----------------------+---------+---------+\n",
-      "| 1  | Culmulative matchings |    3    |    1    |\n",
-      "+----+-----------------------+---------+---------+\n",
-      "| 2  |  Culmulative profit   | 13.6147 | 5.36507 |\n",
-      "+----+-----------------------+---------+---------+\n",
-      "| 3  |   Current matchings   |    3    |    3    |\n",
-      "+----+-----------------------+---------+---------+\n",
-      "| 4  |    Current profit     | 13.6147 | 5.36507 |\n",
-      "+----+-----------------------+---------+---------+\n"
+      "+----+-----------------------+---------+-------+\n",
+      "|    |        indexes        |    1    |   2   |\n",
+      "+====+=======================+=========+=======+\n",
+      "| 0  |         Time          |  25215  | 25215 |\n",
+      "+----+-----------------------+---------+-------+\n",
+      "| 1  | Culmulative matchings |    1    |   0   |\n",
+      "+----+-----------------------+---------+-------+\n",
+      "| 2  |  Culmulative profit   | 4.66473 |   0   |\n",
+      "+----+-----------------------+---------+-------+\n",
+      "| 3  |   Current matchings   |    1    |   1   |\n",
+      "+----+-----------------------+---------+-------+\n",
+      "| 4  |    Current profit     | 4.66473 |   0   |\n",
+      "+----+-----------------------+---------+-------+\n"
      ]
     }
    ],
@@ -280,7 +304,7 @@
     "\n",
     "# 03 loop simulation\n",
     "\n",
-    "\n",
+    "record_df=pd.DataFrame([],columns=['second', 'Cul_matchings_1', 'Cul_profits_1', 'Cur_matchings_1', 'Cur_profits_1', 'Cul_matchings_2', 'Cul_profits_2', 'Cur_matchings_2', 'Cur_profits_2'])\n",
     "\n",
     "while True:\n",
     "    \n",
@@ -602,7 +626,7 @@
     "\n",
     "    if len(unmatched_orders)!=0:\n",
     "\n",
-    "        order_df.loc[(time_stamp-order_df['request_second']>=300)&(order_df['order_id'].isin(unmatched_orders)),'driver_id']='cancelled'\n",
+    "        order_df.loc[(time_stamp-order_df['request_second']>=waiting_patience)&(order_df['order_id'].isin(unmatched_orders)),'driver_id']='cancelled'\n",
     "        \n",
     "    ######################################################################################################\n",
     "    \n",
@@ -636,7 +660,7 @@
     "\n",
     "    values2=[time_stamp,\\\n",
     "             matchings2,profit2,\\\n",
-    "             len(matchings[1]),profits[2]]\n",
+    "             len(matchings[2]),profits[2]]\n",
     "\n",
     "    df['1']=values1\n",
     "\n",
@@ -648,15 +672,43 @@
     "\n",
     "    show_df(df)\n",
     "    \n",
+    "    \n",
+    "    \n",
     "    ######################################################################################################\n",
     "    \n",
-    "    # 03-13 dynamically update the timestamp\n",
+    "    # 03-13 dynamically save the performance\n",
+    "    \n",
+    "    added_item={}\n",
+    "\n",
+    "    added_item['second']=int(time_stamp)\n",
+    "\n",
+    "    added_item['Cul_matchings_1']=matchings1\n",
+    "\n",
+    "    added_item['Cul_profits_1']=profit1\n",
+    "    \n",
+    "    added_item['Cur_matchings_1']=len(matchings[1])\n",
+    "\n",
+    "    added_item['Cur_profits_1']=profits[1]\n",
+    "\n",
+    "    added_item['Cul_matchings_2']=matchings2\n",
+    "\n",
+    "    added_item['Cul_profits_2']=profit2\n",
+    "    \n",
+    "    added_item['Cur_matchings_2']=len(matchings[2])\n",
+    "\n",
+    "    added_item['Cur_profits_2']=profits[2]\n",
+    "    \n",
+    "    record_df=record_df.append(added_item, ignore_index=True)\n",
+    "                \n",
+    "    ######################################################################################################\n",
+    "    \n",
+    "    # 03-14 dynamically update the timestamp\n",
     "    \n",
     "    time_stamp+=batch_interval\n",
     "    \n",
     "    ######################################################################################################\n",
     "    \n",
-    "    # 03-14 quit condition\n",
+    "    # 03-15 quit condition\n",
     "    \n",
     "    completion_percentage=100*(order_df.loc[order_df.driver_id!='waiting'].shape[0])/(order_df.shape[0])\n",
     "    \n",
@@ -671,7 +723,10 @@
     "\n",
     "order_df.to_csv('./02result/'+scenario+'/customer_2023-02-'+str(day)+'.csv')\n",
     "\n",
-    "driver_df.to_csv('./02result/'+scenario+'/supply_2023-02-'+str(day)+'.csv')\n"
+    "driver_df.to_csv('./02result/'+scenario+'/supply_2023-02-'+str(day)+'.csv')\n",
+    "\n",
+    "record_df.to_csv('./02result/'+scenario+'/record_2023-02-'+str(day)+'.csv')\n",
+    "\n"
    ]
   },
   {
